Source/WebCore: Content disappears when scrolling http://www.childrenscancer.org/zach/ https://bugs.webkit.org/show_bug.cgi?id=116206

Reviewed by Darin Adler.

When a RenderLayerBacking gains or loses a foregroundLayer or backgroundLayer,
we need to repaint the primary layer, since what paints into that primary
layer will change.

On the page in question, we gained/lost a foreground layer when scrolling because
the page popped an element into position:fixed.

Test: compositing/repaint/foreground-layer-change.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateForegroundLayer):
(WebCore::RenderLayerBacking::updateBackgroundLayer):

LayoutTests: Content disappears when scrolling  http://www.childrenscancer.org/zach/
https://bugs.webkit.org/show_bug.cgi?id=116206

Reviewed by Darin Adler.

Ref test for foreground layer removal.

* compositing/repaint/foreground-layer-change-expected.html: Added.
* compositing/repaint/foreground-layer-change.html: Added.

Canonical link: https://commits.webkit.org/134635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150213 268f45cc-cd09-0410-ab3c-d52691b4dbfc